espace entre contact et page d'avant sur mobile

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -242,5 +242,9 @@ import logo from "../assets/logo.webp";
   .navbar-menu.is-active > .navbar-end > .navbar-item:last-child {
     padding-left: 3rem;
   }
+  /* Espace avant le bouton Contact sur mobile */
+  .navbar-menu.is-active > .navbar-end > .navbar-item:last-child {
+    margin-top: 0.75rem;
+  }
 }
 </style>
